kubernetes/core/traefik/traefik/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bouncer
spec:
  plugin:
    crowdsec-bouncer-traefik-plugin:
      enabled: false
      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec:8080
      crowdsecLapiKey: Afnc!v*5BVAe2wHAXV25VC4y
      ForwardedHeadersCustomName: X-Real-Ip
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
