kubernetes/core/traefik/traefik/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.f9.casa`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: f9-casa-tls
